fixed extra white spacing at bottom of page

--- a/src/App.css
+++ b/src/App.css
@@ -10,17 +10,6 @@ html, body, #root, #app, #app>div {
   /* font-family: 'Oswald', sans-serif; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   display: flex;
   flex-direction: row;
@@ -52,9 +41,11 @@ html, body, #root, #app, #app>div {
   height: 6vh;
 }
 
-.headshot img {
-    max-width: 100%;
-    height: auto;
+.bio-background img {
+  max-inline-size: 100%;
+  block-size: auto;
+  object-fit:cover;
+  display: block;
 }
 
 .bio-card p {
@@ -69,7 +60,7 @@ html, body, #root, #app, #app>div {
   height: 100%;
   width: 50%;
   background-color: #F2F2F2;
-  opacity: 0.89;
+  opacity: 0.92;
   padding: 30px;
   border-radius:5px;
   z-index: 1;
@@ -117,7 +108,6 @@ html, body, #root, #app, #app>div {
 .Navigation {
   display: flex;
   justify-content: space-evenly;
-  padding: 10px;
   font-family: 'Raleway', sans-serif;
   font-size: 4vw;
   border-bottom: solid;
